...
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:id="@+id/details_scrollview"
      >

...

      <ImageView
          android:id="@+id/eventView"
          android:layout_width="match_parent"
          android:layout_height="270dp"
...

            <TextView
                android:id="@+id/nameText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...
              >
            <TextView
                android:id="@+id/likesText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...
                >
              <ImageView
                  android:id="@+id/shareView"
                  android:layout_width="16dp"
                  android:layout_height="16dp"
...
                  />
              <TextView
                  android:id="@+id/shareText"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
...
                  android:layout_marginBottom="2dp"
                  android:maxLines="1"
                  android:text="@string/share"
                  />
            </LinearLayout>
...
            >
          <TextView
              android:id="@+id/categoryText"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
...
              />
          <ImageView
              android:id="@+id/categoryView"
              android:layout_width="21dp"
              android:layout_height="21dp"
...
              />
          <TextView
              android:id="@+id/nameCategoryText"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
...
            >
          <TextView
              android:id="@+id/riskQuestion"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
...
              />
          <TextView
              android:id="@+id/riskAnswer"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
...
        </LinearLayout>
        <TextView
            android:id="@+id/descriptionText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
...
              >
            <TextView
                android:id="@+id/sinceText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...
                />
            <TextView
                android:id="@+id/distanceText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...

          <TextView
              android:id="@+id/streetText"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
...
        </LinearLayout>
        <TextView
            android:id="@+id/too_far_message"
            android:layout_width="match_parent"
            android:layout_height="50dp"
...
            >
          <android.support.v7.widget.AppCompatButton
              android:id="@+id/confirmButton"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
...
              />
          <android.support.v7.widget.AppCompatButton
              android:id="@+id/resolveButton"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
...
              />
              <android.support.v7.widget.AppCompatButton
                  android:id="@+id/reportButton"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
...
              >
            <com.mikhaellopez.circularimageview.CircularImageView
                android:id="@+id/userImage"
                android:layout_width="80dp"
                android:layout_height="80dp"
...
                  >
                <TextView
                    android:id="@+id/userName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...
                    />
                <TextView
                    android:id="@+id/userUsername"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...
                  >
                <ProgressBar
                    android:id="@+id/userProgress"
                    android:layout_width="match_parent"
                    android:layout_height="10dp"
...
                    />
                <TextView
                    android:id="@+id/userLevel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...
