...
  <string name='days'>days</string>
  <string name='today'>today</string>
  <string name='km'>km</string>
  <string name="m">m</string>
  <string name="unconfirm">Unconfirm</string>
  <string name="confirm">Confirm</string>
  <string name="confirm_message">Issue was confirmed successfully</string>
  <string name="unconfirm_message">Issue was unconfirmed successfully</string>
  <string name="confirm_error_message">Couldn\'t confirm the issue</string>
  <string name="unconfirm_error_message">Couldn\'t unconfirm the issue</string>
  <string name="couldnt_update_issue_info">Couldn\'t get updated issue info</string>
  <string name="unreport">Unreport</string>
  <string name="report">Report</string>
  <string name="report_message">Issue was reported successfully</string>
  <string name="unreport_message">Issue was unreported successfully</string>
  <string name="report_error_message">Couldn\'t report the issue</string>
  <string name="unreport_error_message">Couldn\'t unreport the issue</string>
  <string name="unresolve">Unresolve</string>
  <string name="resolve">Resolve</string>
  <string name="resolve_message">Issue was marked as resolved successfully</string>
  <string name="unresolve_message">Issue was marked as unresolved successfully</string>
  <string name="resolve_error_message">Couldn\'t mark the issue as resolved</string>
  <string name="unresolve_error_message">Couldn\'t mark the issue as unresolved</string>
  <string name="too_far_from_issue">You\'re too far from this issue</string>
  <string name='daysAgo'>days ago</string>
  <string name="edit_issue">Edit Issue</string>
  <string name="delete_issue">Delete Issue</string>

  <string name="delete_sure">Delete Issue?</string>
  <string name="cant_confirm_own_issue">You can\'t confirm your own issue</string>
  <string name="cant_report_own_issue">You can\'t report your own issue</string>
  <string name="cant_resolve_own_issue">You can\'t resolve your own issue</string>
  <string name="couldnt_delete_issue">Couldn\'t delete issue</string>
  <string name="couldnt_edit_issue">Couldn\'t edit issue</string>
  <string name="must_write_title_description">You must write a title and a description</string>
  <string name="unspecified_title">Unspecified title</string>
  <string name="you_have_won">You have earned:</string>
...
